Update CI parameter naming

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -8,13 +8,13 @@ Mappings:
     SourceArchives:
       Key: github-source-archive.zip
 Parameters:
+  NotificationsStackName:
+    Type: String
   GitHubToken:
      Type: String
   GitHubWebhookSecret:
     Type: String
-  LambdaCodeBucket:
-    Type: String
-  NotificationsStackName:
+  InfrastructureCodeBucket:
     Type: String
 Resources:
   # ACM Certificates
@@ -215,7 +215,7 @@ Resources:
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
-        S3Bucket: !Ref LambdaCodeBucket
+        S3Bucket: !Ref InfrastructureCodeBucket
         S3Key: ci/github-webhook-endpoint.zip
       Description: Backs the GitHub webhook payload requests endpoint
       Environment:
@@ -231,7 +231,7 @@ Resources:
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
-        S3Bucket: !Ref LambdaCodeBucket
+        S3Bucket: !Ref InfrastructureCodeBucket
         S3Key: ci/github-event-handler.zip
       Description: Handles GitHub events forwarded from the endpoint
       Environment:
@@ -252,7 +252,7 @@ Resources:
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
-        S3Bucket: !Ref LambdaCodeBucket
+        S3Bucket: !Ref InfrastructureCodeBucket
         S3Key: ci/codebuild-callback-handler.zip
       Description: Handles GitHub events forwarded from the endpoint
       Environment:
