--- a/legacy/buildspec.yml
+++ b/legacy/buildspec.yml
@@ -5,12 +5,12 @@
 # that CloudFormation has access to them).
 version: 0.1
 phases:
-  build:
-    commands:
-      - echo Compressing Lambda functions
-      - cd lambdas; find * -maxdepth 0 -type d|while read dirname; do cd "$dirname"; zip -r "$dirname" *; mv "$dirname".zip ..; cd ..; done; cd ..
-      - echo Starting S3 sync to $TEMPLATE_BUCKET
-      - aws s3 sync . s3://$TEMPLATE_BUCKET --acl private --region $AWS_REGION --delete --exclude ".git/*" --exclude "buildspec.yml"
+  # build:
+  #   commands:
+  #     - echo Compressing Lambda functions
+  #     - cd lambdas; find * -maxdepth 0 -type d|while read dirname; do cd "$dirname"; zip -r "$dirname" *; mv "$dirname".zip ..; cd ..; done; cd ..
+  #     - echo Starting S3 sync to $TEMPLATE_BUCKET
+  #     - aws s3 sync . s3://$TEMPLATE_BUCKET --acl private --region $AWS_REGION --delete --exclude ".git/*" --exclude "buildspec.yml"
 artifacts:
   # It seems like CodePipeline and CodeBuild expect an artifact here. Currently
   # we don't need any, so this is essentially a no-op.
