Work on getting root stack launched

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -377,7 +377,7 @@ Resources:
               Configuration:
                 Owner: PRX
                 Repo: Infrastructure
-                Branch: master
+                Branch: prx-ci
                 OAuthToken: !Ref GitHubToken
               OutputArtifacts:
                 - Name: InfrastructureRepoSourceArtifact
