--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -18,13 +18,18 @@ Parameters:
   EnvironmentType:
     Type: String
 Resources:
-  VPCStack:
-    Type: "AWS::CloudFormation::Stack"
+  TempIamGroup:
+    Type: "AWS::IAM::Group"
     Properties:
-      NotificationARNs:
-        - Fn::ImportValue: !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/vpc.yml"]]
-      TimeoutInMinutes: "5"
+      GroupName: !Sub "TempGroup${EnvironmentType}"
+  # VPCStack:
+  #   Type: "AWS::CloudFormation::Stack"
+  #   Properties:
+  #     NotificationARNs:
+  #       - Fn::ImportValue: !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+  #     TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/  ${}   /vpc.yml"
+  #     TemplateURL: !Join ["", [, "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", ""]]
+  #     TimeoutInMinutes: "5"
 
 
 
