Use old acceptance test params for now

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -518,17 +518,21 @@ Resources:
       Description: Runs acceptance tests for PRX platform
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
-        # EnvironmentVariables:
-        #   - Name: DOVETAIL_HOST
-        #     Value: https://dovetail-staging.prxu.org
-        #   - Name: DOVETAIL_PROD
-        #     Value: https://dovetail.prxu.org
-        #   - Name: FEEDER_HOST
-        #     Value: feeder-staging.prx.tech
-        #   # - Name: PUBLISH_HOST
-        #   #   Value: !Join ["", ["Fn::ImportValue": !Sub "${RootStackName}-Staging-PublishHostedZoneDNSName"]]
-        #   - Name: PUBLISH_USER
-        #     Value: test@test.com
+        EnvironmentVariables:
+          - Name: DOVETAIL_HOST
+            Value: https://dovetail-staging.prxu.org
+          - Name: DOVETAIL_PROD
+            Value: https://dovetail.prxu.org
+          - Name: DOVETAIL_PROD_HOST
+            Value: dovetail.prxu.org
+          - Name: FEEDER_HOST
+            Value: feeder-staging.prx.tech
+          - Name: PUBLISH_HOST
+            Value: publish-staging.prx.tech
+          - Name: PUBLISH_USER
+            Value: test@test.com
+          - Name: PUBLISH_PASS
+            Value: test
         Image: aws/codebuild/ruby:2.3.1
         Type: LINUX_CONTAINER
       # If this Name changes, the CodeBuild role policy needs to change too
