--- a/notifications/notifications.yml
+++ b/notifications/notifications.yml
@@ -69,6 +69,9 @@ Resources:
       MemorySize: 128
       Role: !GetAtt LambdaBasicExecutionIAMRole.Arn
       Runtime: nodejs6.10
+      Tags:
+        - Key: Project
+          Value: Infrastructure
       Timeout: 3
   # Lambda Permssions for SNS
   OpsDebugTopicInvokeRelayFunctionPermission:
