--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -17,18 +17,16 @@ Parameters:
     Type: String
   EnvironmentType:
     Type: String
+  InfrastructureGitCommit:
+    Type: String
 Resources:
-  TempIamGroup:
-    Type: "AWS::IAM::Group"
-  # VPCStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   Properties:
-  #     NotificationARNs:
-  #       - Fn::ImportValue: !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
-  #     TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/  ${}   /vpc.yml"
-  #     TemplateURL: !Join ["", [, "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", ""]]
-  #     TimeoutInMinutes: "5"
-
+  VPCStack:
+    Type: "AWS::CloudFormation::Stack"
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue: !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+      TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/vpc.yml"
+      TimeoutInMinutes: "5"
 
 
 
