Add better tagging to CI lambdas

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -226,6 +226,9 @@ Resources:
       MemorySize: 128
       Role: !GetAtt LambdaExecutionIAMRole.Arn
       Runtime: nodejs6.10
+      Tags:
+        - Key: Project
+          Value: Infrastructure
       Timeout: 3
   GitHubEventHandlerLambdaFunction:
     Type: "AWS::Lambda::Function"
@@ -247,6 +250,9 @@ Resources:
       MemorySize: 256
       Role: !GetAtt LambdaExecutionIAMRole.Arn
       Runtime: nodejs6.10
+      Tags:
+        - Key: Project
+          Value: Infrastructure
       Timeout: 3
   CodeBuildCallbackHanlderLambdaFunction:
     Type: "AWS::Lambda::Function"
@@ -263,6 +269,9 @@ Resources:
       MemorySize: 128
       Role: !GetAtt LambdaExecutionIAMRole.Arn
       Runtime: nodejs6.10
+      Tags:
+        - Key: Project
+          Value: Infrastructure
       Timeout: 3
   # Lambda Alarms
   GitHubWebhookEndpointErrorAlarm:
