--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -16,6 +16,8 @@ Parameters:
     Type: String
   InfrastructureCodeBucket:
     Type: String
+  CodeBuildBootstrapUrl:
+    Type: String
 Resources:
   # ACM Certificates
   CiCertificate:
@@ -411,7 +413,7 @@ Resources:
       Name: !Sub ${AWS::StackName}-Runner
       ServiceRole: !GetAtt CodeBuildIAMRole.Arn
       Source:
-        BuildSpec: "version: 0.1\n\nphases:\n  build:\n    commands:\n      - curl -sO https://raw.githubusercontent.com/PRX/Infrastructure/master/ci/bootstrap.sh && sh bootstrap.sh"
+        BuildSpec: !Sub "version: 0.1\n\nphases:\n  build:\n    commands:\n      - curl -sO ${CodeBuildBootstrapUrl} && sh bootstrap.sh"
         Location: !Join ["", ["arn:aws:s3:::", !Ref SourceArchiveBucket, "/", !FindInMap [Shared, SourceArchives, Key]]]
         Type: S3
       Tags:
