--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -137,6 +137,46 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       Policies:
+        # CodePipeline seems to need access to special buckets
+        - PolicyName: GenericCodePipelineS3PutPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:PutObject"
+                Resource:
+                  - "arn:aws:s3:::codepipeline*"
+        # Let CodePipeline read and write artifacts
+        - PolicyName: ArtifactStoreFullAccess
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:Get*"
+                  - "s3:Put*"
+                  - "s3:List*"
+                Resource:
+                  - !Sub arn:aws:s3:::${ArtifactStore}
+                  - !Sub arn:aws:s3:::${ArtifactStore}/*
+        # CodePipeline needs access to objects that are used in source actions
+        - PolicyName: S3SourceActionAccessPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:GetBucketVersioning"
+                Resource:
+                  - !Sub arn:aws:s3:::${TemplateConfigBucket}
+              - Effect: Allow
+                Action:
+                  - "s3:GetObject"
+                  - "s3:GetObjectVersion"
+                Resource:
+                  - !Sub arn:aws:s3:::${TemplateConfigBucket}/${TemplateConfigKey}
+        # For Approval actions
         - PolicyName: SnsApprovalsPolicy
           PolicyDocument:
             Version: "2012-10-17"
@@ -146,16 +186,7 @@ Resources:
                   - "sns:Publish"
                 Resource:
                   - !Ref CodePipelineApprovalsSnsTopic
-        - PolicyName: ArtifactStoreFullAccess
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  - "s3:*"
-                Resource:
-                  - !Sub arn:aws:s3:::${ArtifactStore}
-                  - !Sub arn:aws:s3:::${ArtifactStore}/*
+        # Allow CodePipeline to manipulate CloudFormation root stacks
         - PolicyName: RootStackCloudFormationAccess
           PolicyDocument:
             Version: "2012-10-17"
@@ -165,6 +196,14 @@ Resources:
                   - "iam:PassRole"
                 Resource:
                   - !GetAtt CloudFormationIAMRole.Arn
+              # Full access for staging stacks
+              - Effect: Allow
+                Action:
+                  - "cloudformation:*"
+                Resource:
+                  - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${AWS::StackName}-root-staging
+                  - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${AWS::StackName}-root-staging/*
+              # Production stacks shouldn't get deleted
               - Effect: Allow
                 Action:
                   - "cloudformation:DescribeStacks"
@@ -175,8 +214,9 @@ Resources:
                   - "cloudformation:ExecuteChangeSet"
                   - "cloudformation:DeleteChangeSet"
                 Resource:
-                  - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${AWS::StackName}-root-staging/*
+                  - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${AWS::StackName}-root-production
                   - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${AWS::StackName}-root-production/*
+        # Allows CodePipeline to invoke Lambda function actions
         - PolicyName: LambdaRolePolicy
           PolicyDocument:
             Version: "2012-10-17"
@@ -190,6 +230,7 @@ Resources:
                   - "lambda:InvokeFunction"
                 Resource:
                   - !GetAtt InfrastructureRepoSourceS3SyncFuncton.Arn
+        # Lets CodePipeline start CodeBuild (for acceptance tests, etc)
         - PolicyName: CodeBuildPolicy
           PolicyDocument:
             Version: "2012-10-17"
@@ -202,23 +243,6 @@ Resources:
                   - !GetAtt AcceptanceTestBuildProject.Arn
                   - !Sub "${AcceptanceTestBuildProject.Arn}/*"
                 Resource: "*"
-        - PolicyName: CodePipelineRolePolicy
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: Allow
-                Action:
-                  # TODO Not sure what these are being used for
-                  # Probably for source action buckets and artifact buckets
-                  # Maybe also template buckets
-                  - "s3:GetObject"
-                  - "s3:GetObjectVersion"
-                  - "s3:GetBucketVersioning"
-                Resource: "*"  # TODO Really?
-              - Effect: Allow
-                Action:
-                  - "cloudwatch:*" # TODO Really?
-                Resource: "*" # TODO Really?
   CodeBuildIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -233,6 +257,7 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       Policies:
+        # Allow CodeBuild to log to CloudWatch
         - PolicyName: CodeBuildLogs
           PolicyDocument:
             Version: "2012-10-17"
@@ -247,6 +272,7 @@ Resources:
                   # name from below
                   - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-Acceptance
                   - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-Acceptance:*
+        # CodeBuild sources from CodePipeline artifacts, so it needs access
         - PolicyName: ArtifactStoreBasicAccess
           PolicyDocument:
             Version: "2012-10-17"
@@ -257,21 +283,10 @@ Resources:
                   - "s3:GetObject"
                   - "s3:GetObjectVersion"
                 Resource: !Sub arn:aws:s3:::${ArtifactStore}/*
-        # - PolicyName: TemplateBucketsBasicAccess
-        #   PolicyDocument:
-        #     Version: "2012-10-17"
-        #     Statement:
-        #       - Effect: Allow
-        #         Action:
-        #           - "s3:ListBucket"
-        #           - "s3:PutObject"
-        #           - "s3:DeleteObject"
-        #         Resource:
-        #           - !Sub arn:aws:s3:::${StagingTemplateBucket}
-        #           - !Sub arn:aws:s3:::${StagingTemplateBucket}/*
-        #           - !Sub arn:aws:s3:::${ProductionTemplateBucket}
-        #           - !Sub arn:aws:s3:::${ProductionTemplateBucket}/*
   CloudFormationIAMRole:
+    # This role gets passed to CloudFormation, and is used by CloudFormation to
+    # to perform actions against other AWS resources.
+    #
     # This is the role used to launch the root stack, and thus all nested app
     # and service stacks. It needs permissions to create any of the resources
     # that those stacks require. Eg, if a stack nested in the root stack
@@ -292,16 +307,16 @@ Resources:
               - "sts:AssumeRole"
       Path: "/"
       Policies:
-        # - PolicyName: TemplateBucketAccess
-        #   PolicyDocument:
-        #     Version: "2012-10-17"
-        #     Statement:
-        #       - Effect: Allow
-        #         Action:
-        #           - "s3:GetObject"
-        #         Resource:
-        #           - !Sub arn:aws:s3:::${StagingTemplateBucket}/*
-        #           - !Sub arn:aws:s3:::${ProductionTemplateBucket}/*
+        #
+        - PolicyName: TemplateBucketAccess
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:GetObject"
+                Resource:
+                  - !Sub arn:aws:s3:::${InfrastructureCodeBucket}/sync/Infrastructure*
         # - PolicyName: CodeBucketAccess
         #   PolicyDocument:
         #     Version: "2012-10-17"
