Try debugging parameter overrides

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -496,7 +496,7 @@ Resources:
                 StackName: !Sub ${AWS::StackName}-root-staging
                 ParameterOverrides: !Sub |
                     {
-                      "InfrastructureGitCommit": { "Fn::GetParam" : ["RepoStateArtifact", "state.json", "commit"]},
+                      # "InfrastructureGitCommit": { "Fn::GetParam" : ["RepoStateArtifact", "state.json", "commit"]},
                       "NotificationsStackName": "${NotificationsStackName}",
                       "InfrastructureCodeBucket": "${InfrastructureCodeBucket}"
                     }
