More param overrides

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -19,6 +19,8 @@ Parameters:
     Type: String
   InfrastructureGitCommit:
     Type: String
+  Foo:
+    Type: String
 Resources:
   VPCStack:
     Type: "AWS::CloudFormation::Stack"
