--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -19,7 +19,8 @@ Parameters:
     Type: String
   InfrastructureGitCommit:
     Type: String
-  Foo:
+  # SecretsBase - base name for aws-secrets s3 bucket, KMS key, roles, and more - e.g. "prx_apps"
+  SecretsBase:
     Type: String
 Resources:
   VPCStack:
