update with secrets version, match root param ordering

--- a/stacks/audiogram.yml
+++ b/stacks/audiogram.yml
@@ -21,21 +21,23 @@ Parameters:
   PlatformALBHTTPSListenerPriority:
     Type: String
   ##############################################################################
-  RootStackName:
-    Type: String
   ECSCluster:
     Type: String
   ECSServiceAutoscaleIAMRoleArn:
     Type: String
   ECSServiceIAMRole:
     Type: String
+  ##############################################################################
   EnvironmentTypeAbbreviation:
     Type: String
   ECRRegion:
     Type: String
+  OpsDebugMessagesSNSTopicArn:
+    Type: String
+  ##############################################################################
   AudiogramECRImageTag:
     Type: String
-  OpsDebugMessagesSNSTopicArn:
+  AudiogramSecretsVersion:
     Type: String
 Resources:
   AudiogramLogGroup:
