--- a/stacks/audiogram.yml
+++ b/stacks/audiogram.yml
@@ -34,6 +34,8 @@ Parameters:
     Type: String
   OpsDebugMessagesSNSTopicArn:
     Type: String
+  SecretsBase:
+    Type: String
   ##############################################################################
   AudiogramECRImageTag:
     Type: String
