fix audiogram ecr repo name

--- a/stacks/audiogram.yml
+++ b/stacks/audiogram.yml
@@ -89,7 +89,7 @@ Resources:
             - start
           Cpu: 512
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${ECRRegion}.amazonaws.com/audiogram.prx.tech:${AudiogramECRImageTag}
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${ECRRegion}.amazonaws.com/audiogram:${AudiogramECRImageTag}
           LogConfiguration:
             LogDriver: awslogs
             Options:
