better identify overridden params

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -18,17 +18,11 @@ Parameters:
     Type: "AWS::EC2::KeyPair::KeyName"
   ECRRegion:
     Type: String
-  NotificationsStackName:
-    Type: String
-  InfrastructureCodeBucket:
-    Type: String
   EnvironmentType:
     Type: String
     AllowedValues:
       - Staging
       - Production
-  InfrastructureGitCommit:
-    Type: String
   SecretsBase:
     Type: String
   # Application Specific
@@ -39,6 +33,13 @@ Parameters:
   CastleECRImageTag:
     Type: String
   CastleSecretsVersion:
+    Type: String
+  # Parameter Overrides
+  NotificationsStackName:
+    Type: String
+  InfrastructureCodeBucket:
+    Type: String
+  InfrastructureGitCommit:
     Type: String
   # For testing
   Foo:
