pass secrets to ecs stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -25,6 +25,8 @@ Parameters:
       - Production
   SecretsBase:
     Type: String
+  SecretsKey:
+    Type: String
   # Application Specific
   AudiogramECRImageTag:
     Type: String
@@ -105,6 +107,8 @@ Resources:
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        SecretsBase: !Ref SecretsBase
+        SecretsKey: !Ref SecretsKey
       TemplateURL: !Sub "http://s3-${AWS::Region}.amazonaws.com/${InfrastructureCodeBucket}/sync/Infrastructure/${InfrastructureGitCommit}/stacks/ecs.yml"
       TimeoutInMinutes: "5"
   LoadBalancersStack:
