Work around for param override fn bug

--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -494,11 +494,12 @@ Resources:
                 ChangeSetName: !Sub ${AWS::StackName}RootStagingChangeSet
                 RoleArn: !GetAtt CloudFormationIAMRole.Arn
                 StackName: !Sub ${AWS::StackName}-root-staging
+                 # TODO This should use the git commit hash from the artifact
                 ParameterOverrides: !Sub |
                   {
                     "NotificationsStackName": "${NotificationsStackName}",
                     "InfrastructureCodeBucket": "${InfrastructureCodeBucket}",
-                    "InfrastructureGitCommit": "3cc7da28433f23d0a1b3c1fd6e7898bdd067ba6c",
+                    "InfrastructureGitCommit": "latest",
                     "Foo": "Bar"
                   }
                 TemplateConfiguration: TemplateConfigZipArtifact::staging.json
