Improve ASG instance tagging

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -318,6 +318,12 @@ Resources:
             - "autoscaling:EC2_INSTANCE_LAUNCH_ERROR"
             - "autoscaling:EC2_INSTANCE_TERMINATE_ERROR"
       Tags:
+        - Key: Project
+          Value: platform.prx.org
+          PropagateAtLaunch: true
+        - Key: Environment
+          Value: !Ref EnvironmentType
+          PropagateAtLaunch: true
         - Key: Name
           Value: !Ref ECSCluster
           PropagateAtLaunch: true
